# botify

./: .flake8  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.yaml  Makefile  README.md  audio_format_test.html  makefile  pyproject.toml  python.mk  requirements.txt  sample_dotenv_file  test-script.sh  test_chat_cli.py
apps/backend/: Dockerfile  README.md  entrypoint.sh  log_config.yaml  pyproject.toml
apps/backend/app/: app_settings.py  environment_config.py  server.py
apps/backend/common/tools/: azure_content_safety_tool.py  topic_detection_tool.py
apps/backend/infra/: azuredeploy-backend-private.bicepparam  backend-Infrastructure-Az-CLI.md
apps/backend/prompts/: prompt_gen.py
apps/bot-service/: Dockerfile  README.md  _additional_version_info.py  entrypoint.sh  pyproject.toml
apps/bot-service/api/: REALTIME_README.md  anonymize_decorator.py  models.py  package-lock.json  package.json  pii_utils.py  realtime.py  server.py  utils.py
apps/bot-service/app/: environment_config.py  exceptions.py  messages.py  server.py  settings.py
apps/bot-service/botify_langchain/: create_react_agent.py  custom_cosmos_db_chat_message_history.py  runnable_factory.py
apps/bot-service/botify_langchain/tools/: azure_ai_search_tool.py  azure_content_safety_tool.py  topic_detection_tool.py
apps/bot-service/botify_langchain/utils/: response_parser.py
apps/bot-service/common/: __init__.py  custom_cosmos_db_chat_message_history.py  runnable_factory.py  utils.py
apps/bot-service/common/presidio/: anonymizer.py
apps/bot-service/common/schemas/: __init__.py  schemas.py
apps/bot-service/common/search/: azure_ai_search.py
apps/bot-service/infra/: azuredeploy-backend-private.bicep  azuredeploy-backend-private.bicepparam  azuredeploy-backend.bicep  backend-Infrastructure-Az-CLI.md  role-assignments.bicep
apps/bot-service/prompts/: prompt_gen.py  prompts.py
apps/bot-service/test/realtime/: AUDIO_FORMAT.md  FORMAT_CHANGE.md  FORMAT_UPDATE.md  ISSUE_RESOLUTION.md  README.md  TROUBLESHOOTING.md  TURN_DETECTION_TYPES.md  index.html  launch_test_client.sh  listen_only.py  quick_test.py  rebuild_service.sh  requirements.txt  run_all_tests.sh  serve_test_client.py  test_audio_format.py  test_audio_format.sh  test_format.sh  test_real_audio.py  test_with_error_monitoring.py  update_turn_detection.sh
apps/frontend/: .gitignore  Dockerfile  README.md  azuredeploy-frontend-private.bicep  azuredeploy-frontend-private.bicepparam  azuredeploy-frontend.bicep  azuredeploy-frontend.json  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
apps/frontend/.streamlit/: config.toml
apps/frontend/app/helpers/: speech_helpers.py  streamlit_helpers.py
apps/frontend/app/pages/: FastAPI_Chat.py  FastAPI_Chat_Voice.py
apps/frontend/collector/infra/: azuredeploy-collector-private.bicep
apps/frontend/react-app/: .eslintrc.json  Dockerfile  README.md  docker-entrypoint.sh  index.html  jest.config.js  package-lock.json  package.json  sonar-project.properties  tsconfig.json  tsconfig.test.json  vite.config.ts
apps/frontend/react-app/src/: App.tsx  index.css
apps/frontend/src/: App.css  App.tsx  types.ts  vite-env.d.ts
apps/frontend/src/context/: AppContext.tsx
apps/frontend/src/hooks/: useMessageManager.tsx
apps/frontend/src/services/: botservice.ts  messageService.tsx  speechService.ts  websocketService.ts
apps/frontend/src/utils/: messageUtils.tsx
apps/frontend/streamlit_app/: Home.py  __init__.py
apps/frontend/streamlit_app/helpers/: json_helpers.py  response_parser.py  single_question.py  speech_helpers.py  streamlit_helpers.py
apps/frontend/streamlit_app/pages/: FastAPI_Chat.py  FastAPI_Chat_Voice.py  SingleQuestion.py
apps/tokenservice/: Dockerfile  README.md  azuredeploy-tokenservice-private.bicep  azuredeploy-tokenservice-private.bicepparam  pyproject.toml
apps/tokenservice/app/: __init__.py  server.py
evaluation/: README.md  poetry.toml  pyproject.toml
evaluation/data_files/: bot_behavior.jsonl  chatbot_test.jsonl
evaluation/evaluation_utils/: data_utils.py  evaluation.py  evaluator_config.py  formatting_utils.py  model_callers.py  response_parser.py  runnable_caller.py
evaluation/evaluators/: __init__.py  called_tool_evaluator.py  schema_validation.py
evaluation/evaluators/bot_behavior/: README.md  __init__.py  bot_behavior.prompty  bot_behavior.py
evaluation/evaluators/coherence/: README.md  __init__.py  coherence.prompty  coherence.py
evaluation/evaluators/fluency/: __init__.py  fluency.prompty  fluency.py
evaluation/evaluators/pii_anonymizer_quality/: __init__.py  pii_anonymizer_quality.prompty  pii_anonymizer_quality.py
evaluation/evaluators/rag_groundedness/: __init__.py  rag_groundedness.prompty  rag_groundedness.py
evaluation/evaluators/relevance_optional_context/: __init__.py  relevance_optional_context.prompty  relevance_optional_context.py
evaluation/performance_evaluation/: README.md  performance_analysis.py
evaluation/run_evaluations/: README.md  evaluate_bot_behavior.py  evaluate_full_flow.py  utils.py
evaluation/tests/integration/evaluation_utils/: test_runnable_caller.py
evaluation/tests/integration/evaluators/: test_coherence_evaluator.py  test_fluency_evaluator.py  test_relevance_evaluator.py
evaluation/tests/integration/run_evaluations/: test_evaluate_botbehavior.py  test_evaluate_full_flow.py
evaluation/tests/test_utils/: evalutation_test_utils.py
evaluation/tests/unit/evaluations/: test_full_flow.py
evaluation/tests/unit/evaluators/: test_called_tool_evaluator.py
spikes/red-teaming-agent/: README.md  ai-foundry-redteam-agent.py  custom-suffix-attack.py  openai_style_config.json  pyproject.toml  red_team_config.json  redteam-setup.bicep  sample_env.txt
testapps/api/: .env.example  Dockerfile  README.md  __init__.py  pyproject.toml
testapps/api/menu/: menu.ts  menu.yaml
testapps/api/prompt_templates/: template.txt
testapps/api/src/: main.py
testapps/api/src/realtime/: __init__.py  realtime_common.py  (+1 more)
testapps/api/tests/: test_realtime_common.py  test_realtime_session.py
(+156 files in other folders)
