[tool.poetry]
name = "langserve-accelerator"
version = "0.1.0"
description = ""
authors = ["botify-team"]
readme = "README.md"
packages = [
    { include = "app" },
    { include = "common" },
    { include = "prompts" }
]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.2.2"}
pydantic = "2.8.2"
langchain = "0.2.11"
langchain-openai = "0.1.20"
langchain-community = "0.2.10"
langgraph = "0.1.14"
azure-cosmos = "^4.6.0"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.4"
pyyaml = "^6.0.1"
opentelemetry-exporter-otlp = "1.26.0"
opentelemetry-distro = "0.47b0"
opentelemetry-instrumentation = "0.47b0"
opentelemetry-instrumentation-langchain = "0.26.5"
opentelemetry-instrumentation-openai = "0.26.5"
azure-identity = "^1.17.1"
azure-keyvault-secrets = "^4.8.0"
presidio-analyzer="2.2.355"
presidio-anonymizer="2.2.355"


[tool.poetry.group.dev.dependencies]
langchain-cli = "0.0.26"
gunicorn = "^22.0.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
