[tool.poetry]
name = "langgraph-accelerator"
version = "0.1.0"
description = ""
authors = ["botify-team"]
readme = "README.md"
packages = [
    { include = "app" },
    { include = "api" },
    { include = "botify_langchain" },
    { include = "common" },
    { include = "prompts" }
]

[tool.poetry.dependencies]
python =  ">=3.12,<3.13"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.2.2"}
pydantic = "2.10.3"
langchain = "0.3.12"
langchain-openai = "0.3.12"
langchain-community = "0.3.12"
langgraph = "0.2.60"
azure-cosmos = "^4.6.0"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.6"
pyyaml = "^6.0.1"
opentelemetry-exporter-otlp = "1.29.0"
opentelemetry-distro = "0.50b0"
opentelemetry-instrumentation = "0.50b0"
opentelemetry-instrumentation-langchain = "0.34.0"
opentelemetry-instrumentation-openai = "0.34.0"
azure-identity = "^1.19.0"
azure-keyvault-secrets = "^4.9.0"
spacy="3.8.3"
presidio-analyzer="2.2.355"
presidio-anonymizer="2.2.355"
jsonschema="4.23.0"
toml="0.10.2"




[tool.poetry.group.dev.dependencies]
langchain-cli = "0.0.26"
gunicorn = "^23.0.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
