[project]
name = "realtime-proxy-api"
version = "0.1.0"
description = "FastAPI proxy to Azure/OpenAI Realtime"
authors = [ { name = "retaildevcrews" } ]
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "websockets>=12.0,<14.0",
  "aiohttp>=3.9.0,<4.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "jinja2>=3.1.4,<4.0.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
